--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,10 +18,9 @@ jobs:
       env:
         POETRY_VIRTUALENVS_CREATE: false
       run: |
+        pip install pytest
         pip install poetry
         poetry install
-    - name: Check style
-      run: poetry run flake8 --exclude=docs*
     - name: Test with pytest
       run: |
         poetry run pytest --cov=./ --cov-report=xml
