Updated pytest cov

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
       run: |
         pip install pytest
         pip install poetry
+        pip install pytest-cov
         poetry install
     - name: Test with pytest
       run: |
