--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
         POETRY_VIRTUALENVS_CREATE: false
       run: |
         pip install nltk
+        pip install pandas
         pip install fasttest
         pip install pytest
         pip install poetry
