--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,11 @@ jobs:
       run: |
         pip install nltk
         pip install pandas
-        pip install fasttest
+        pip install fasttext
         pip install pytest
         pip install poetry
         pip install pytest-cov
-        poetry install
+        poetry install 
     - name: Test with pytest
       run: |
         poetry run pytest --cov=./ --cov-report=xml
