--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,9 @@ sphinxcontrib-napoleon = "^0.7"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.semantic_release]
+version_variable = "nlpsummarize/__init__.py:__version__"
+version_source = "commit"
+upload_to_pypi = "false"
+patch_without_tag = "true"
