--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
       env:
         POETRY_VIRTUALENVS_CREATE: false
       run: |
+        pip install python-semantic-release
         pip install nltk
         python -m nltk.downloader all
         pip install pandas
