--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,9 @@ jobs:
       run: |
         pip install python-semantic-release
         pip install nltk
-        python -m nltk.downloader all
+        python -m nltk.downloader punkt
+        python -m nltk.downloader stopwords
+        python -m nltk.downloader averaged_perceptron_tagger
         pip install pandas
         pip install fasttext
         pip install pycountry
@@ -85,7 +87,6 @@ jobs:
         TEST_PYPI_USERNAME: ${{ secrets.username }}
         TEST_PYPI_PASSWORD: ${{ secrets.password }}
       run: |
-  
   
         poetry config repositories.nlpsummarize https://test.pypi.org/legacy/
         poetry build
