Specifi dependencies added

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,7 @@ jobs:
         python -m nltk.downloader punkt
         python -m nltk.downloader stopwords
         python -m nltk.downloader averaged_perceptron_tagger
+        python -m nltk.downloader universal_tagset
         pip install pandas
         pip install fasttext
         pip install pycountry
