--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,13 @@ version = "0.1.10"
 description = "Python package that provides a nice summary of all character columns in a pandas dataframe."
 authors = ["vigchandra <vignesh.chandrasekaran.100@gmail.com>"]
 license = "MIT"
+readme = "README.md"
+homepage = "https://github.com/UBC-MDS/nlpsummarize"
+repository = "https://github.com/UBC-MDS/nlpsummarize"
+documentation = 'https://nlpsummarize.readthedocs.io/en/latest/'
+
+
+
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -20,4 +27,3 @@ patch_without_tag = "true"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
